Fix text wrapping

--- a/Course 4/Section 7/Project 6 - MyNotes/css/style.css
+++ b/Course 4/Section 7/Project 6 - MyNotes/css/style.css
@@ -74,6 +74,7 @@ body {
 .note-body {
   padding: 20px 15px;
   font-size: 14px;
+  overflow-wrap: break-word;
 }
 
 .note-panel {
